--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,14 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
     }
 }
 
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
         
     }
@@ -28,16 +30,36 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+// Define versions in a single place
 ext {
-    appCompatVersion = '1.2.0'
-    coreVersion = '1.3.2'
-    constraintLayoutVersion = '2.0.4'
-    junitVersion = '4.13.1'
-    junitExtversion = '1.1.2'
-    espressoVersion = '3.3.0'
-    androidTestVersion = '1.3.0'
+    // Sdk and tools
+    minSdkVersion = 16
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
+    constraintLayoutVersion = '1.1.3'
+    recyclerViewVersion = '1.0.0'
 
-    materialVersion = '1.2.1'
-    recyclerViewVersion = '1.1.0'
-    glideVersion = '4.11.0'
+    // App dependencies
+    supportLibraryVersion = '1.1.0'
+    materialVersion = '1.0.0'
+    vectorDrawableVersion = '1.0.1'
+    animatedVectorDrawableVersion = '1.0.0'
+//    gsonVersion = '2.8.2'
+    glideVersion = '3.7.0'
+    greenDaoVersion = '3.3.0'
+
+    dagger2Version = '2.16'
+    rxjava2Version = '2.1.9'
+    rxandroidVersion = '2.0.2'
+//    butterKnifeVersion = '8.6.0'
+//    placeholderviewVersion = '0.6.1'
+//    debugDBVersion = '1.0.3'
+//    timberVersion = '4.5.1'
+    lifecycleVersion = '2.0.0'
+
+    // Test dependencies
+    junitVersion = '4.12'
+    espressoVersion = '3.1.0'
+    mockitoVersion = '2.15.0'
 }
