Third Working Application (Adding RECORD, TIME & DYNAMIC DATA)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,8 +129,8 @@ dependencies {
     // view model
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycleVersion"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycleVersion"
-    implementation 'androidx.navigation:navigation-fragment:2.3.4'
-    implementation 'androidx.navigation:navigation-ui:2.3.4'
+//    implementation 'androidx.navigation:navigation-fragment:2.3.4'
+//    implementation 'androidx.navigation:navigation-ui:2.3.4'
 }
 
 //configurations.all {
