--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,20 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.crud.CRUDActivity"
-            android:label="CRUD"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ui.splash.SplashActivity">
+            android:label="CRUD MVVMgreenDao"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.splash.SplashActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!---->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
     </application>
 
