--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ ext {
     materialVersion = '1.0.0'
     vectorDrawableVersion = '1.0.1'
     animatedVectorDrawableVersion = '1.0.0'
-//    gsonVersion = '2.8.2'
+    gsonVersion = '2.8.2'
     glideVersion = '3.7.0'
     greenDaoVersion = '3.3.0'
 
