--- a/build.gradle
+++ b/build.gradle
@@ -32,31 +32,22 @@ task clean(type: Delete) {
 
 // Define versions in a single place
 ext {
-    // Sdk and tools
-    minSdkVersion = 16
-    targetSdkVersion = 28
-    compileSdkVersion = 28
-    buildToolsVersion = '28.0.3'
-    constraintLayoutVersion = '1.1.3'
+    // App dependencies
+    constraintLayoutVersion = '2.0.4'
     recyclerViewVersion = '1.2.0'
 
     // App dependencies
-    supportLibraryVersion = '1.1.0'
-    materialVersion = '1.0.0'
+    supportLibraryVersion = '1.2.0'
+    materialVersion = '1.3.0'
     vectorDrawableVersion = '1.0.1'
     animatedVectorDrawableVersion = '1.0.0'
     gsonVersion = '2.8.2'
-    glideVersion = '3.7.0'
     greenDaoVersion = '3.3.0'
 
     dagger2Version = '2.16'
     rxjava2Version = '2.1.9'
     rxandroidVersion = '2.1.0'
-//    butterKnifeVersion = '8.6.0'
-//    placeholderviewVersion = '0.6.1'
-//    debugDBVersion = '1.0.3'
-//    timberVersion = '4.5.1'
-    lifecycleVersion = '2.0.0'
+    lifecycleVersion = '2.2.0'
 
     // Test dependencies
     junitVersion = '4.12'
