--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
-        
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
@@ -22,7 +18,6 @@ allprojects {
         google()
         mavenCentral()
         jcenter()
-        
     }
 }
 
@@ -33,24 +28,22 @@ task clean(type: Delete) {
 // Define versions in a single place
 ext {
     // App dependencies
-    constraintLayoutVersion = '2.0.4'
     recyclerViewVersion = '1.2.0'
-
-    // App dependencies
-    supportLibraryVersion = '1.2.0'
     materialVersion = '1.3.0'
     vectorDrawableVersion = '1.0.1'
     animatedVectorDrawableVersion = '1.0.0'
+    // parser
     gsonVersion = '2.8.2'
+    // database
     greenDaoVersion = '3.3.0'
-
+    // dependency injection
     dagger2Version = '2.16'
+    // reactive
     rxjava2Version = '2.1.9'
     rxandroidVersion = '2.1.0'
+    //view model
     lifecycleVersion = '2.2.0'
-
-    // Test dependencies
-    junitVersion = '4.12'
-    espressoVersion = '3.1.0'
-    mockitoVersion = '2.15.0'
+    //Export Excel
+    multiDexVersion = '1.0.3'
+    apachePoiVersion = '3.17'
 }
