--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:requestLegacyExternalStorage="true">
         <activity
             android:name=".ui.crud.CRUDActivity"
-            android:label="Arsitektur MVVM greenDao"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
